fix(front): improve responsive by avoiding label overflow ellipsis

--- a/frontend/src/css/NotificationWall.styl
+++ b/frontend/src/css/NotificationWall.styl
@@ -14,6 +14,7 @@
   &__filterInput.filterBar
     margin-top 0
     margin-bottom 0
+    flex 2.5
   &__list
     flex-grow 2
     overflow auto
